fixed the titile and positioned the main form element well

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="container" id="nav">
                 <img src="images/ucclogo.png" alt="ucc logo" height="50" id="logo">
                 
-                <h3><a href="index.html"> UNIVERSITY OF CAPECOAST</a></h3><span id="header-year">-Admissionlist 2020/2021</span>
+                <h3><a href="index.html">ADMISSIONLIST UCC</a></h3><span id="header-year">2020/2021</span>
         </nav>
     </header>
 
