this is a little bit modification if did on the fancy form

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
             <!-- working on the search form -->
 
-            <div class="form px-5 pb-5">
+            <div class="form px-3 px-md-5 px-sm-5 pb-5">
                 <div id="round-circle" class="shadow"></div>
                 <form action="#" method="#" id="stylish-form">
                     <input type="text" name="fname" placeholder="enter first name">
